--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "pencil_sketch_1460325811596.jpg"
   name             : "Prof. Me. Antonio Melo"
   pronouns         : # example: "she/her"  
-  bio              : "Professor Assistente do Instituto Acadêmico de Ciências Tecnológicas e pesquisador na área de Matemática com interesse em Álgebra e Sistemas Dinâmicos aplicados"
+  bio              : "Cientista Matemático <br> <br> Professor Assistente do Instituto Acadêmico de Ciências Tecnológicas da <a style='color: blue;' href='https://ueg.br'>Universidade Estadual de Goiás</a> & <a style='color: yellow;' href='https://www.ueg.br/posse/'>no Campus de Posse</a> e pesquisador na área de Matemática com interesse em Álgebra e Sistemas Dinâmicos aplicados"
   employer         : "Universidade Estadual de Goiás"
   location         : "Posse/GO"
   uri              : "https://www.ueg.br/posse/"
