--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "pencil_sketch_1460325811596.jpg"
   name             : "Prof. Me. Antonio Melo"
   pronouns         : # example: "she/her"  
-  bio              : "Cientista Matemático <br> <br> Professor Assistente do Instituto Acadêmico de Ciências Tecnológicas da <a style='color: powderblue;' href='https://ueg.br'>Universidade Estadual de Goiás</a> no <a style='color: turquoise;' href='https://www.ueg.br/posse/'>Campus de Posse</a> e pesquisador na área de Matemática com interesse em <a style='color: lightblue;' href='https://pt.wikipedia.org/wiki/%C3%81lgebra_abstrata'>Álgebra</a> e <a style='color: cyan;' href='https://pt.wikipedia.org/wiki/Sistema_din%C3%A2mico'>Sistemas Dinâmicos</a> aplicados"
+  bio              : "Cientista Matemático <br> <br> Professor Assistente do Instituto Acadêmico de Ciências Tecnológicas da <a style='color: powderblue;' href='https://ueg.br'>Universidade Estadual de Goiás</a> no <a style='color: turquoise;' href='https://www.ueg.br/posse/'>Campus de Posse</a> e pesquisador na área de Matemática com interesse em <a style='color: #6495ed;' href='https://pt.wikipedia.org/wiki/%C3%81lgebra_abstrata'>Álgebra</a> e <a style='color: #ccccff;' href='https://pt.wikipedia.org/wiki/Sistema_din%C3%A2mico'>Sistemas Dinâmicos</a> aplicados"
   employer         : # URL
   location         : # URL
   uri              : # URL
