--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "in/antonio-melo-46868670"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
