--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,6 +16,9 @@ main:
  
   - title: "Publicações"
     url: /publications/
+
+  - title: "Videos"
+    url: /videos
     
   - title: "CV"
     url: "http://lattes.cnpq.br/0391816886848365"
